# easyvpn-plugin

./: .gitignore  CMakeLists.txt  easyvpn.db
docs/: on_client_connect.md  sqlite_stmts.md
include/: dao.h  inetx.h  model.h  ovpn_client_config.h  vector.h
src/: dao.c  inetx.c  main.c  ovpn_client_config.c  vector.c
